extra spaces removed, bugs fixed

--- a/css/style.css
+++ b/css/style.css
@@ -136,3 +136,6 @@ label{
     width: 50%;
     display: inline;
 }
+.danger{
+    color: red;
+}
